--- a/styles/Beamer/forest-beamer-setup.sty
+++ b/styles/Beamer/forest-beamer-setup.sty
@@ -45,7 +45,7 @@
 
 % https://tex.stackexchange.com/a/253384/18561
 \tikzset{% set up for transitions using tikz with beamer overlays
-  alerted/.style={color=red},
+  alerted/.style={color=alerted text.fg},
   alert on/.style={alt=#1{alerted}{}},
 }
 \forestset{%
