--- a/styles/abbrev.sty
+++ b/styles/abbrev.sty
@@ -515,8 +515,11 @@ Derivation}{derivation}\xspace}
 \newcommand{\bards}{"~\emph{bar}"=derivations\xspace}
 \newcommand{\barden}{"~\emph{bar}"=Derivationen\xspace}
 
-\newcommand{\itsdb}{\mbox{\textsf{\lbrack incr tsdb()\rbrack}}\xspace}
+\newcommand{\itsdb}{\mbox{\textsf{\lbrack incr tsdb()\rbrack}}\indexitsdb}
+\newcommand{\indexitsdb}{\is{incr tsdb()@\mbox{\textsf{\lbrack incr tsdb()\rbrack}}}\xspace}
 \newcommand{\tsdb}{\mbox{\textsf{\lbrack incr tsdb()\rbrack}}\xspace}
+
+\newcommand{\indexlkb}{\is{Linguistic Knowledge Builder (LKB)}\xspace}
 
 \newcommand{\word}[1]{\emph{#1}\iw{#1}}
 \newcommand{\noword}[1]{\emph{*\,#1}\iw{#1@*\,#1}}
