--- a/formgram-include.tex
+++ b/formgram-include.tex
@@ -31,7 +31,8 @@
 %\usepackage{jambox}
 
 
-%\usepackage{dgmacros,pst-tree,trees,dalrymple} % Mary Dalrymples macros
+\usepackage{dgmacros,pst-tree,trees,dalrymple} % Mary Dalrymples macros
+%\usepackage{dgmacros,dalrymple} % Mary Dalrymples macros
 
 \usepackage{my-ccg-ohne-colortbl}
 
@@ -103,7 +104,7 @@ St.Mueller@hu-berlin.de}
 \include{formgram-gb3}
 \include{formgram-gpsg}
 \include{formgram-feature-descriptions}
-% \include{formgram-lfg}
+\include{formgram-lfg}
 % % \include{formgram-lmt}
 % \include{formgram-cg}
 % %\include{formgram-patr}
