--- a/formgram-include.tex
+++ b/formgram-include.tex
@@ -46,6 +46,7 @@
 \newcommand{\dat}{\DAT}
 \newcommand{\acc}{\ACC}
 
+\newcommand\mathdash{\text{\normalfont -}}
 
 %\usepackage{soul}
 
@@ -105,9 +106,7 @@ St.Mueller@hu-berlin.de}
 \include{formgram-gpsg}
 \include{formgram-feature-descriptions}
 \include{formgram-lfg}
-% % \include{formgram-lmt}
-% \include{formgram-cg}
-% %\include{formgram-patr}
+\include{formgram-cg}
 % \include{formgram-hpsg}
 
 % \include{formgram-cxg}
